fix: fixed udf config test to avoid write static from instance ctx err (#10664)